tests/invalid/function/local_let_rec_affine_capture.facet
fn main() -> affine isize {
  let y: affine isize = 1 in
  let rec [y] f(x: affine isize) -> affine isize {
    x
  }
  in (f 0)
}
